--- a/shop-single.css
+++ b/shop-single.css
@@ -425,11 +425,15 @@ h6{
 
 
 /* THIS IS  */
+
 .back{
     background-color: rgb(245, 240, 240);
-    padding :50px;
-    margin-top: 40px;
+    margin-top: 70px;
+    margin-bottom: 70px;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
+
 
 .price{
     font-size: 30px;
@@ -487,12 +491,7 @@ label{
     color:#7971ea;
 }
 
-.back{
-    background-color: rgb(245, 240, 240);
-    padding :20px;
-    margin-top: 40px;
-    margin-bottom: 100px;
-}
+
 .card-img-top {
 height: 200px;
     object-fit:cover;
@@ -524,34 +523,32 @@ height: 200px;
     text-align: center;
     
 }
-
-.margi{
+.card{
+    margin-top:40px;
+    padding-left:0;
+    padding-right:0;
+    margin-bottom: 40px;
     margin-left: 30px;
+
+  
 }
+
+
+.cards img{
+   
+    object-fit:cover;
+ }
 
 .imgi{
     padding:0;
 }
 
-.card-text{
-    color:gray;
+.card-body{
+    text-align: center;
+    
 }
-
-.backgroundi{
-  
-  padding:80px;
-
-}
-
-.card-body p{
-    margin:0;
-    padding:0;
-}
-
 .card-body h5{
-    margin:0;
-    padding:0;
-    margin-top:5px;
+    color:#7971ea;
 }
 
 .foto{
