--- a/shop.css
+++ b/shop.css
@@ -223,16 +223,16 @@ input[type=range]{
     
 }
 .red{
-    background-color: red;
+   color: red;
 }
-.g{
-    background-color: green;
+.green{
+   color: green;
 }
-.b{
-    background-color: blue;
+.blue{
+    color: blue;
 }
-.p{
-    background-color: purple;
+.purple{
+    color: purple;
    
 }
 
@@ -310,11 +310,7 @@ h6{
     margin-left: 25px;
 }
 
-.purple{
-    color:#7971ea;
-    margin-top:15px;
-    margin-bottom: 0;
-}
+
 
 .navigation{
     margin-left:25px;
